--- a/src/components/player/slider/slider.styles.scss
+++ b/src/components/player/slider/slider.styles.scss
@@ -1,9 +1,31 @@
 
+.slick-active.slick-current {
+
+  .slider__item-content {
+
+    img {
+      box-shadow: 0 0 16px 0px #ff3050db;
+    }
+
+    h3 {
+      color: #fff;
+    }
+
+  }
+}
+
 .slider {
 
 
   margin: 0 8rem ;
-  margin-bottom: 15rem;
+
+  &__line {
+    width: 100%;
+    height: 3px;
+    background-color: var(--primary-color);
+    margin: 3rem 0;
+    box-shadow: 0 0 7px 1px #ff30509c;
+  }
 
   &__item {
     outline: none;
