--- a/src/components/player/slider/slider.styles.scss
+++ b/src/components/player/slider/slider.styles.scss
@@ -29,8 +29,20 @@
 
   &__item {
     outline: none;
+    &-duration {
+      position: absolute;
+      bottom: 37px;
+      right: 20px;
+      font-size: 1.6rem;
+      color: #fff;
+      background-color: #00000085;
+      padding: 3px 7px;
+      border-radius: 3px;
+      font-weight: 100;
+    }
       &-content {
         // margin: 0 2rem;
+        position: relative;
         &:hover h3 {color: #fff}
         width: 300px;
         height: 300px;
@@ -43,6 +55,8 @@
             box-shadow: 0 0 14px 1px #28c7fa1a;
             margin: 11px;
         }
+
+
 
         h3 {
           text-align: center;
