--- a/src/components/hero/hero.styles.scss
+++ b/src/components/hero/hero.styles.scss
@@ -2,7 +2,11 @@
 .hero {
 
     position: relative;
-    margin-bottom: 45rem;
+    margin-bottom: 41rem;
+    @media  screen and (max-width: 730px) {
+      margin-bottom: 29rem;
+    }
+
   h1 {
       color: white;
       text-align: center;
@@ -10,6 +14,10 @@
       letter-spacing: 3px;
       font-size: 3rem;
       margin: 3rem;
+      @media  screen and (max-width: 830px) {
+        font-size: 2rem;
+        line-height: 28px;
+      }
       position: relative;
       top: 70px;
       z-index: 2;
@@ -22,23 +30,51 @@
     background: var(--primary-color);
     width: 365px;
     height: 365px;
+    @media  screen and (max-width: 830px) {
+      width: 265px;
+      height: 265px;
+      left: -165px;
+    }
     position: absolute;
     border-radius: 50%;
     z-index: 1;
     left: -53px;
     top: -13px;
     box-shadow: 0px 0px 53px 0px #ff304fd4;
+    animation-name: move-circle-primry;
+    animation-duration: 3s;
+    animation-fill-mode:forwards;
+  }
+
+  @keyframes move-circle-primry {
+
+        0% {transform: translateX(-265px);box-shadow: 0px 0px 0px 0px transparent; }
+        100% {transform: translateX(0px); box-shadow: 0px 0px 53px 0px #ff304fd4;}
   }
 
 &__circle-secondary {
       background: var(--secondary-color);
       width: 365px;
       height: 365px;
+      @media  screen and (max-width: 830px) {
+        width: 265px;
+        height: 265px;
+        right: -160px;
+      }
       position: absolute;
       border-radius: 50%;
       z-index: 1;
       right: -96px;
       top: -64px;
       box-shadow: 0px 0px 53px 0px #28C7FA;
+      animation-name: move-circle-secondary;
+      animation-duration: 3s;
+      animation-fill-mode:forwards;
+    }
+
+@keyframes move-circle-secondary {
+
+          0% {transform: translateX(265px);box-shadow: 0px 0px 0px 0px transparent; }
+          100% {transform: translateX(0px); box-shadow: 0px 0px 53px 0px #28C7FA;}
     }
 }
