--- a/src/components/nav/nav.styles.scss
+++ b/src/components/nav/nav.styles.scss
@@ -11,6 +11,10 @@
       color: #fff;
       text-decoration: none;
       font-size: 2.8rem;
+      @media  screen and (max-width: 830px) {
+        font-size: 2rem;
+      }
+
       font-weight: 300;
       letter-spacing: 2px;
       transition: all 0.4s ease-in-out;
