--- a/src/components/nav/navItem/navItem.styles.scss
+++ b/src/components/nav/navItem/navItem.styles.scss
@@ -2,9 +2,14 @@
 .navItem {
   display: flex;
   justify-content: space-between;
-
+  align-items: center;
   a {
     font-size: 2.4rem;
+    @media  screen and (max-width: 830px) {
+      font-size: 2rem;
+      margin-right: 2rem;
+      margin-left: 1rem;
+    }
     color: #b3b3b3;
     text-decoration: none;
     margin-left: 7rem;
