--- a/src/components/nav/nav.styles.scss
+++ b/src/components/nav/nav.styles.scss
@@ -7,6 +7,8 @@
   padding: 5rem 0;
 
   &__logo {
+    display: flex;
+    align-items: center;
     a {
       color: #fff;
       text-decoration: none;
